Revert "Fix meeting-invite overflow issue"
This reverts commit 14790bbe42b3951c5ae2f7c2812eee44e59d3895.

--- a/frontend/src/app/shared/components/meeting-invite/meeting-invite.component.sass
+++ b/frontend/src/app/shared/components/meeting-invite/meeting-invite.component.sass
@@ -42,13 +42,8 @@ div.ui.small.input
     width: calc(100% - 30px)
 
 .ui.relaxed.divided.selection.list
-    margin-bottom: 25px
+    margin-bottom: 50px
     .item
         padding: 0
     max-height: 40vh
     overflow-y: auto
-
-.ui.modal>.content
-    max-height: 80vh
-    display: flex
-    flex-direction: column
